--- a/assignment/spatial-assignment.Rmd
+++ b/assignment/spatial-assignment.Rmd
@@ -80,6 +80,7 @@ it_obj <- s_obj |>
 ```
 
 
+
 ```{r}
 properties <- map(it_obj$features, "properties")
 cloud_cover <- map_dbl(properties, "eo:cloud_cover")
@@ -93,9 +94,12 @@ vsi_url <- paste0("/vsicurl/", download_url)
 ```
 
 ```{r}
-# paste in the download_url after the vsicurl
-sf_rast <- terra::rast(vsi_url)
-plot(sf_rast)
+library(stars)
+birm_stars <- stars::read_stars(vsi_url)
+birm_crs <- st_crs(birm_stars)
+bbox_poly <- bbox |> st_as_sfc() |> st_transform(birm_crs)
+brim_stars2 <- birm_stars |> st_crop(bbox_poly)
+brim_stars2 |> plot(rgb=c(1,2,3))
 ```
 
 
