Fixed histogram implementation and added written response to Exercise 2

--- a/assignment/spatial-assignment.Rmd
+++ b/assignment/spatial-assignment.Rmd
@@ -101,6 +101,7 @@ bbox_poly <- bbox |> st_as_sfc() |> st_transform(birm_crs)
 birm_stars2 <- birm_stars |> st_crop(bbox_poly)
 birm_stars2 |> plot(rgb=c(1,2,3))
 ```
+
 ```{r}
 library(rstac)
 library(terra) 
@@ -133,6 +134,7 @@ nir <- rast( paste0("/vsicurl/", best_img$assets$B08$href) ) |> crop(e)
 
 ndvi_fun <- function(x, y) (x - y) / (x + y)
 ndvi <- lapp(c(nir, red), fun = ndvi_fun)
+sf_ndvi <- ndvi
 
 tmap_options(check.and.fix = TRUE)
 #tm_shape(sf_ndvi) + tm_raster() +
@@ -156,14 +158,6 @@ sanfran3 <-
   rename(ndvi = lyr1)
 sanfran3
 ```
-
-```{r}
-hist(ndvi,
-  main = "NDVI: San Francisco",
-  col = "#003262",
-  xlab = "NDVI Index Value")
-```
-
 
 # Exercise 1
 **Create a map which shows current (2019) mean NDVI across city redlining from the 1950s.**
@@ -194,7 +188,13 @@ nir <- rast( paste0("/vsicurl/", best_img$assets$B08$href) ) |> crop(e)
 
 ndvi_fun <- function(x, y) (x - y) / (x + y)
 ndvi <- lapp(c(nir, red), fun = ndvi_fun)
-plot(ndvi)
+denv_ndvi <- ndvi
+
+denver |> tmap::tm_shape() +
+  tm_polygons(col="holc_grade")
+plot(ndvi, 
+     main = "NDVI of Denver",
+     axes = FALSE, box = FALSE)
 
 denver2 <- denver |> st_transform(st_crs(red))
 x <- terra::extract(ndvi, vect(sanfran2), mean, na.rm=TRUE)
@@ -206,18 +206,25 @@ denver3 <-
   rename(ndvi = lyr1)
 denver3
 ```
-```
 
 # Exercise 2
 **Plot the average NDVI values in different neighborhoods as well as the distribution of pixel values across cities and neighborhoods. Show how the trends differ between cities.**
 
 ```{r}
-hist(ndvi,
-  main = "NDVI: Denver",
+hist(sf_ndvi,
+  main = "NDVI: San Francisco",
   col = "#003262",
   xlab = "NDVI Index Value")
 ```
 
+
+```{r}
+hist(denv_ndvi,
+  main = "NDVI: Denver",
+  col = "#003262",
+  xlab = "NDVI Index Value")
+```
+The histogram of Denver's NDVI is more densely distributed between the region of 0-1.0. When comparing the redlining and vegetation map, the homogeneity of the vegetation does not drastically differ across districts based on their holc grade from redlining. By comparison, San Francisco has data strongly centered at an NDVI of 0 and the vegetation map indicates a stark contrast between the vegetation in redlined areas with holc grade serving as a decent indicator of vegetation. One possible explanation for this is the necessity of high-density housing in those redlined areas since inhabitants of those areas can't relocate to other parts of the city due to redlining and high costs. San Francisco has higher population density than denver so the effects of redlining are more pronounced.
 
 # Exercise 3: 
 **Explain why considering systematic inequity and racism is important in the context of global change and developing solutions to the biodiversity crisis.**
